* Fixed wrong colour on dialog background
git-svn-id: http://medimage.versi.edu.au/repos/daris-monbulk/trunk@186 bafdac2c-dbdc-46f6-923a-4e95a7fa9079

--- a/war/Monbulk-2.css
+++ b/war/Monbulk-2.css
@@ -946,7 +946,7 @@ MethodEditorDynamicFieldsPanel
 
 .gwt-Tree .noItemHighlight
 {
-	background-color: #ffffff;
+	background-color: #F9F9F9;
 }
 
 .gwt-Tree .itemSelected
